--- a/css/style.css
+++ b/css/style.css
@@ -39,4 +39,28 @@
     background-color: #B1E5F2;
 }
 
+h5{color: #808080;
+}
     
+.immagineuno{
+    width: 300px;
+    height: 200px;
+    position: relative;    
+
+}
+h6 {
+    position: absolute;
+    color: #eee;
+    font: bold 22px italic;
+    padding:10px;       
+    top: 100px;
+    left: 10;
+    width: 100%;
+ }
+ .immaginedue{
+    width: 300px;
+    height: 200px;
+    position: relative;  
+}  
+    
+   
